cmake_minimum_required (VERSION 3.1)
project (dumpvdl2 C)

set (DUMPVDL2_VERSION_MAJOR 2)
set (DUMPVDL2_VERSION_MINOR 1)
set (DUMPVDL2_VERSION_PATCH 0pre)
set (DUMPVDL2_VERSION "${DUMPVDL2_VERSION_MAJOR}.${DUMPVDL2_VERSION_MINOR}.${DUMPVDL2_VERSION_PATCH}")
set (CMAKE_C_STANDARD 11)
set (C_STANDARD_REQUIRED ON)
set (CMAKE_C_EXTENSIONS OFF)

if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
   message(STATUS "Build type not specified: defaulting to Release")
endif(NOT CMAKE_BUILD_TYPE)

option(EMIT_ASN_DEBUG, "Enable debugging of ASN.1 decoder (requires
CMAKE_BUILD_TYPE=Debug" OFF)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Og -DDEBUG")

add_subdirectory (src)

# build a CPack driven installer package
include (InstallRequiredSystemLibraries)
set (CPACK_RESOURCE_FILE_LICENSE
	"${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
set (CPACK_RESOURCE_FILE_README
	"${CMAKE_CURRENT_SOURCE_DIR}/README.md")
set (CPACK_PACKAGE_VERSION_MAJOR "${DUMPVDL2_VERSION_MAJOR}")
set (CPACK_PACKAGE_VERSION_MINOR "${DUMPVDL2_VERSION_MINOR}")
set (CPACK_PACKAGE_VERSION_PATCH "${DUMPVDL2_VERSION_PATCH}")
set (CPACK_PACKAGE_CHECKSUM "SHA256")
set (CPACK_STRIP_FILES TRUE)
if (UNIX)
	set (CPACK_GENERATOR "TGZ")
elseif (WIN32)
	set (CPACK_GENERATOR "ZIP")
endif ()
include (CPack)
